welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: not found: value set
			set(7);
                        ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
	for (x<-0 to 6) {
              ^