welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	for (x<-0 to 6) {
		avance();
		if (estSurBiscuit()) {
			set(7);
			return true
		}
		else { return false}
	}
}